# voiceRAG

./: .coverage  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  voicerag_t4_setup.sh
.github/workflows/: ci.yml
app/: config.py  main.py  routes.py  schemas.py
evaluation/: eval_runner.py  test_queries_en.json  test_queries_hi.json
evaluation/results/: baseline_naive.json  selfcrag.json
ingestion/: __main__.py  chunker.py  embedder.py  loader.py
pipeline/: graph.py  state.py
pipeline/nodes/: asr.py  citation_builder.py  classifier.py  crag_evaluator.py  generator.py  hyde.py  retriever.py  self_rag.py  stub_nodes.py
storage/: chroma_client.py  query_log.py
tests/: test_t10_integration.py  test_t1_scaffold.py  test_t2_ingestion.py  test_t3_pipeline.py  test_t4_classifier_hyde.py  test_t5_selfcrag.py  test_t6_generator.py  test_t7_asr.py  test_t8_observability.py  test_t9_evaluation.py
