[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicerag"
version = "0.1.0"
description = "Bilingual Hindi-English voice-driven RAG API using Self-CRAG over Indian government financial documents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Utkarsh", email = "utkarsh@example.com" }]

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "langgraph==0.2.55",
    "langchain-core==0.3.25",
    "langchain-groq==0.2.3",
    "groq==0.13.0",
    "chromadb==0.5.23",
    "sentence-transformers==3.3.1",
    "openai-whisper==20240930",
    "langdetect==1.0.9",
    "pymupdf==1.24.14",
    "tiktoken==0.8.0",
    "ragas==0.2.6",
    "datasets==3.2.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "httpx==0.28.0",
    "sse-starlette==2.1.3",
    "structlog==24.4.0",
    "rich==13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.0",
    "ruff==0.8.3",
    "mypy==1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "pipeline", "ingestion", "storage", "evaluation", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "pipeline", "ingestion", "storage", "evaluation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov=pipeline --cov=storage --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
